<resources>
    <string name="app_name">What\'s Next!?</string>
    <string name="action_settings">Instellingen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Testkast</string>
    <string name="Kast">Kast</string>
    <string name="previous">Terug</string>
    <string name="CamButton">Scan</string>
    <string name="hello_first_fragment">Klik hieronder om naar je kast te gaan</string>
    <string name="hello_second_fragment">hier komt de kast</string>
    <string name="stringadd_item">Add Item</string>
    <string name="kastInstNaam">Kast instellen</string>
    <!-- Preference Titles -->
    <string name="messages_header">General settings</string>


    <!-- Messages Preferences -->


    <!-- Alert Preferences -->
    <string name="alerts_off">U zal geen meldingen ontvangen</string>
    <string name="alerts_on">U zal meldingen ontvangen</string>
    <string name="alerts_title">Meldingen</string>
    <string name="contactnaam">contactnaam</string>
    <string name="contactmail">contactmail</string>
    <string name="bericht">bericht</string>
    <string name="onderwerp">onderwerp</string>
    <string name="verstuur_kopie_naar_mijn_e_mail">verstuur_kopie_naar_mijn_e_mail</string>
    <string name="verstuur_bericht">verstuur_bericht</string>
    <string name="logobalk_contactpagina">logobalk_contactpagina</string>
    <string name="voer_wachtwoord_opnieuw_in">voer wachtwoord opnieuw in</string>
    <string name="naam_nieuwe_gebruiker">naam_nieuwe_gebruiker</string>
    <string name="bovenbalknieuwegebruiker">bovenbalknieuwegebruiker</string>
    <string name="wachtwoord">wachtwoord</string>
    <string name="mail">mail</string>
    <string name="maak_account_aan">maak account aan</string>
    <string name="voer_uw_wachtwoord_opnieuw_in">voer uw wachtwoord opnieuw in</string>
    <string name="naam">naam</string>
    <string name="achtergrond_inlogpagina">achtergrond_inlogpagina</string>
    <string name="gebruikersmail">gebruikersmail</string>

    <string name="nieuwe_gebruiker_aanmaken">nieuwe gebruiker aanmaken</string>
    <string name="aanmelden">aanmelden</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <!--    voeg nieuw product toe-->


    <string name="ProductNaam">Product naam</string>
    <string name="ProductAantal">Aantal</string>
    <string name="ProductVerpakt">Verpakt</string>
    <string name="Add_item">+</string>
    <string name="Welkom">Welkom bij What\'s Next!?</string>
    <string name="view_all">VIEW ALL</string>
    <string name="add">ADD</string>
    <string name="productverpakt">ProductVerpakt</string>
    <string name="verpakt">Verpakt</string>
    <string name="ProductNumber">Product Number</string>
    <string name="ProductName">Product Name</string>
    <string name="btn_add">Add</string>
    <string name="sw_active">verpakt</string>
    <string name="btn_viewAll">view All</string>
    <string name="btn_addItem">+</string>
    <string name="datumveld">DD/MM/JJJJ</string>
    <string name="addveld">Add</string>
    <string name="vieuw_allveld">vieuw All</string>
    <string name="productsealedveld">productSealed</string>


</resources>