<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header"
        app:icon="@drawable/ic_settings">
        <EditTextPreference
            app:key="signature"
            app:title="signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Meldingen">

        <SwitchPreferenceCompat
            app:key="Alerts"
            app:title="@string/alerts_title"
            app:summaryOff="@string/alerts_off"
            app:summaryOn="@string/alerts_on"
            />

    </PreferenceCategory>

</PreferenceScreen>