<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pagina_nieuwegebruiker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <EditText
        android:id="@+id/emailnieuwegebruiker"
        android:layout_width="213dp"
        android:layout_height="49dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="256dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/herhaal_uw_wachtwoord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="432dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/voer_uw_wachtwoord_opnieuw_in"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/gebruikersnaam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="172dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/naam"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/wachtwoord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="340dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/wachtwoord"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bovenbalk_niuwegebruiker"
        android:layout_width="416dp"
        android:layout_height="100dp"
        android:contentDescription="@string/bovenbalknieuwegebruiker"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bovenbalkwhatsnext" />


    <Button
        android:id="@+id/maaknieuwegebruiker"
        android:layout_width="188dp"
        android:layout_height="50dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="655dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="150dp"
        android:backgroundTint="#4CAF50"
        android:gravity="center"
        android:hint="@string/maak_account_aan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.282"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
