<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="558dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contactmail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/contactnaam"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="611dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contactnaam"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtOnderwerp"
        android:layout_width="333dp"
        android:layout_height="45dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="173dp"
        android:layout_marginBottom="513dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/onderwerp"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/tbBericht"
        android:layout_width="333dp"
        android:layout_height="356dp"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="159dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/bericht"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/cbKopie"
        android:layout_width="333dp"
        android:layout_height="44dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="594dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="93dp"
        android:text="@string/verstuur_kopie_naar_mijn_e_mail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnVerstuur"
        android:layout_width="233dp"
        android:layout_height="49dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="655dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="27dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/verstuur_bericht"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logobalk"
        android:layout_width="410dp"
        android:layout_height="87dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="670dp"
        android:contentDescription="@string/logobalk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bovenbalkwhatsnext" />
</androidx.constraintlayout.widget.ConstraintLayout>